check.log
    Checking luminex-ui v0.1.0 (C:\Users\l7cre\Desktop\luminux-code\crates\luminex-ui)
error[E0432]: unresolved import `iced_highlighter`
 --> crates\luminex-ui\src\app\view\editor.rs:3:5
  |
3 | use iced_highlighter::{Highlighter as EditorHighlighter, Settings as HighlightSettings};
  |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `iced_highlighter`
  |
  = help: if you wanted to use a crate named `iced_highlighter`, use `cargo add iced_highlighter` to add it to your `Cargo.toml`

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\dialogs.rs:5:5
   |
 5 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\docks.rs:5:5
   |
 5 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\editor.rs:6:5
   |
 6 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\sidebar.rs:5:5
   |
 5 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\terminal.rs:5:5
   |
 5 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `crate::theme::colors`
  --> crates\luminex-ui\src\app\view\mod.rs:12:5
   |
12 | use crate::theme::colors;
   |     ^^^^^^^^^^^^^^------
   |     |             |
   |     |             help: a similar name exists in the module: `Color`
   |     no `colors` in `theme`
   |
note: module `crate::highlighter::colors` exists but is inaccessible
  --> crates\luminex-ui\src\highlighter.rs:10:1
   |
10 | mod colors {
   | ^^^^^^^^^^ not accessible

error[E0432]: unresolved import `app::run`
  --> crates\luminex-ui\src\lib.rs:27:15
   |
27 | pub use app::{run, App, Flags};
   |               ^^^ no `run` in `app`

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:175:30
    |
175 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:183:30
    |
183 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:192:30
    |
192 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:200:30
    |
200 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:209:34
    |
209 |                         .padding(Padding::from([6, 12]))
    |                                  ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:226:30
    |
226 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:234:30
    |
234 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:243:30
    |
243 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:251:30
    |
251 |                     .padding(Padding::from([6, 12]))
    |                              ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:268:34
    |
268 |                         .padding(Padding::from([6, 12]))
    |                                  ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

error[E0425]: cannot find function `horizontal_space` in this scope
   --> crates\luminex-ui\src\app\view\mod.rs:311:17
    |
311 |                 horizontal_space(),
    |                 ^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  7 + use iced::widget::horizontal_space;
    |

error[E0433]: failed to resolve: use of undeclared type `Padding`
   --> crates\luminex-ui\src\app\view\mod.rs:318:18
    |
318 |         .padding(Padding::from([6, 12]))
    |                  ^^^^^^^ use of undeclared type `Padding`
    |
help: consider importing this struct
    |
  7 + use iced::Padding;
    |

warning: unused import: `Path`
 --> crates\luminex-ui\src\app\mod.rs:3:17
  |
3 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `TopMenu`
 --> crates\luminex-ui\src\app\update.rs:4:60
  |
4 | use super::{App, Message, TabInfo, FileNode, DeletedEntry, TopMenu};
  |                                                            ^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> crates\luminex-ui\src\app\view\mod.rs:9:5
  |
9 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `luminex-ui` (lib) generated 3 warnings
error: could not compile `luminex-ui` (lib) due to 20 previous errors; 3 warnings emitted
